--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    background-color: #fbfbfb;
 }
 .featured-menu {
     display: flex;
@@ -105,4 +106,15 @@ li{
     gap: 10px;
     background: none;
     border: white solid 2px;
+}
+.notes-heading{
+    text-align: center;
+    color: #222;
+    font-size: 36px;
+}
+.notes-subtitle{
+    text-align: center;
+    margin-top: -15px;
+    color: grey;
+    font-size: 15px;
 }
