--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@ li{
     align-items: center;
     justify-content: center;
     padding: 120px 10px;
-    background-image: url(/assets/hero-bg.png);
+    background-image: url(../assets/hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -117,4 +117,41 @@ li{
     margin-top: -15px;
     color: grey;
     font-size: 15px;
+}
+.card-image{
+    background-color:#f95555;
+    padding: 15px;
+    border-radius: 50%;
+    width: 25px;
+   
+}
+.allCards{
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 30px;
+}
+.card{
+    background-color: rgb(247, 247, 247);
+    padding: 50px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+}
+.card-text{
+    text-align: center;
+    color: #222;
+    font-size: 16px;
+}
+.notes{
+    margin: 60px 10px;
+}
+.card:hover{
+    box-shadow: 0 4px 15px rgba(249, 85, 85, 0.1);
+}
+.card-paragraph{
+    font-size: 12px;
 }
