--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
-    background-color: #fbfbfb;
+    background-color: #eeeeee;
 }
 .featured-menu {
     display: flex;
@@ -30,7 +30,7 @@
     font-weight: 600;
 }
 .btn:hover{
-  background-color: #0b3a1f;
+  background-color: #f95555;
   cursor: pointer;
   transition: all 0.5s ease;
   box-shadow: 0 6px 15px rgba(0,0,0,0.2);
@@ -134,7 +134,7 @@ li{
     margin-top: 30px;
 }
 .card{
-    background-color: rgb(247, 247, 247);
+    background-color: #fbfbfb;
     padding: 50px 20px 20px 20px;
     display: flex;
     flex-direction: column;
@@ -147,11 +147,43 @@ li{
     font-size: 16px;
 }
 .notes{
-    margin: 60px 10px;
+    margin: 80px 10px;
 }
 .card:hover{
     box-shadow: 0 4px 15px rgba(249, 85, 85, 0.1);
 }
 .card-paragraph{
     font-size: 12px;
+}
+.brain-structure{
+    display: flex;
+    align-items: center;
+    max-width: 1140px;
+    margin: 0 auto;
+    gap: 60px;
+    margin-bottom: 80px;
+}
+.checkout{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.checkout-text{
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(53, 53, 54);
+    line-height: 16px;
+}
+.solution{
+    color: #469165;
+}
+.brain-heading{
+    color: #222;
+    font-size: 48px;
+}
+.brain-text{
+    color: #627382;
+    font-size: 14px;
+    margin-top: -12px;
+    margin-bottom: 24px;
 }
