--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,8 +33,9 @@
   background-color: #f95555;
   cursor: pointer;
   transition: all 0.5s ease;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
   color: rgb(255, 235, 220);
+  border: none;
 }
 a{
     text-decoration: none;
@@ -54,6 +55,9 @@ li{
     padding: 0px 20px;
     border-radius: 35px;
     background-color: #f7fffb;
+}
+.early-access:hover{
+    background-color: #ffeacf;
 }
 .hero-section{
     display: flex;
@@ -122,7 +126,7 @@ li{
     background-color:#f95555;
     padding: 15px;
     border-radius: 50%;
-    width: 25px;
+    width: 18px;
    
 }
 .allCards{
@@ -135,7 +139,7 @@ li{
 }
 .card{
     background-color: #fbfbfb;
-    padding: 50px 20px 20px 20px;
+    padding: 40px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -186,4 +190,50 @@ li{
     font-size: 14px;
     margin-top: -12px;
     margin-bottom: 24px;
+}
+.ready{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ready-div{
+    background-color: #f7f6f2;
+    padding: 80px 10px;
+    margin-bottom: 80px;
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-bottom: 80px;
+    border-radius: 12px;
+    
+}
+.ready-btn{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+
+}
+.ready-head{
+    color: #222;
+    font-size: 36px;
+}
+.sub-ready{
+    color: #627382;
+    margin-top: -15px;
+    text-align: center;
+    line-height: 24px;
+}
+.credit{
+    list-style: disc;
+    color: #627382;
+    font-size: 14px;
+}
+.during{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.free{
+    color: #627382;
+    font-size: 14px;
 }
